--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-reanimated": "^1.1.0",
     "react-native-snap-carousel": "^3.8.0",
+    "react-native-tab-view": "^2.9.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
