--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MenungID",
+  "name": "menungid",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,11 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "16.8.3",
+    "react-moment": "^0.9.2",
     "react-native": "0.59.9",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-snap-carousel": "^3.8.0",
     "react-navigation": "^3.11.1",
+    "react-number-format": "^4.0.8",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
