--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^6.3.1",
     "moment": "^2.24.0",
     "react": "16.8.3",
     "react-moment": "^0.9.2",
     "react-native": "0.59.9",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-gifted-chat": "^0.9.11",
     "react-native-snap-carousel": "^3.8.0",
     "react-navigation": "^3.11.1",
     "react-number-format": "^4.0.8",
