--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MenungID",
+  "name": "Menungid",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,10 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-maps": "^0.25.0",
+    "react-native-numeric-input": "^1.8.3",
     "react-native-snap-carousel": "^3.8.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
