--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.59.9",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-maps": "^0.25.0",
+    "react-native-image-picker": "^0.28.0",
     "react-native-numeric-input": "^1.8.3",
     "react-native-gifted-chat": "^0.9.11",
     "react-native-snap-carousel": "^3.8.0",
