--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-image-picker": "^0.28.0",
     "react-native-maps": "^0.25.0",
     "react-native-numeric-input": "^1.8.3",
+    "react-native-onesignal": "^3.3.1",
     "react-native-reanimated": "^1.1.0",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-tab-view": "^2.9.0",
